cargo-features = ["per-package-target"]

[package]
name = "server"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-pc-windows-gnu"


[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aobscan = "0.3.0"
ctor = "0.2.0"
#detour = "0.8.1"
memlib = "0.1.3"
pelite = "0.10.0"
thiserror = "1.0.40"
winapi = { version = "0.3.9", features = ["libloaderapi", "tlhelp32", "minwindef", "winnt"] }

[build-dependencies]
bindgen = "0.65.1"
